fix: prevent scroll gestures when modal is visible

--- a/src/app/page.css
+++ b/src/app/page.css
@@ -8,6 +8,9 @@ main {
   &::-webkit-scrollbar {
     display: none;
   }
+  &:has(.scroll-block) {
+    @apply overflow-y-clip;
+  }
 }
 
 .page {
